--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,9 +3,9 @@ name: CI
 on:
   push:
     tags:
-      - '*'
+      - "*"
     branches:
-      - '*'
+      - "*"
   pull_request:
     branches: [master]
 
@@ -13,7 +13,7 @@ jobs:
   test:
     strategy:
       matrix:
-        deno-version: [1.12.0]
+        deno-version: [2.x]
 
     runs-on: ubuntu-latest
     steps:
