updated for node/deno compatibility

--- a/deno.json
+++ b/deno.json
@@ -3,7 +3,7 @@
     "strict": true
   },
   "name": "@aricart/cobra",
-  "version": "0.0.9-1",
+  "version": "0.0.10",
   "exports": {
     ".": "./mod.ts"
   },
