expanded and clarified README with improved documentation, code examples, and TypeScript support

--- a/deno.json
+++ b/deno.json
@@ -3,7 +3,7 @@
     "strict": true
   },
   "name": "@aricart/cobra",
-  "version": "0.0.15",
+  "version": "0.1.0-1",
   "exports": {
     ".": "./mod.ts"
   },
@@ -16,8 +16,9 @@
     ]
   },
   "imports": {
-    "@aricart/runtime": "jsr:@aricart/runtime@^0.0.1",
-    "@std/fmt": "jsr:@std/fmt@^1.0.3",
+    "@aricart/runtime": "jsr:@aricart/runtime@^0.0.2",
+    "@std/fmt": "jsr:@std/fmt@^1.0.8",
+    "@std/assert": "jsr:@std/assert@^1.0.15",
     "minimist": "npm:minimist@^1.2.8"
   }
 }
