--- a/deno.json
+++ b/deno.json
@@ -3,7 +3,7 @@
     "strict": true
   },
   "name": "@aricart/cobra",
-  "version": "0.1.0-1",
+  "version": "0.1.0",
   "exports": {
     ".": "./mod.ts"
   },
